--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -19,7 +19,7 @@
             <img src="./imagens/pokeball.png" alt="Pokeball" />
             <img src="./imagens/download-removebg-preview.png" alt="Pokédex Logo" class="logo" />
         </a>
-    </nav>
+    
 
     <!--Barra de Pesquisa-->
     <div class="ml-auto my-2 my-lg-0 search-bar">
@@ -42,6 +42,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <!--Adicione aqui os links do menu, se necessário-->
     </div>
+</nav>
+
+
+<!--Detalhes do Pokémon-->
+
+<div class="container mt-5">
+
+    <div id="pokemon-detais" class="text-center">
+
+    </div>
+</div>
+
+<!--Bootstrap JS e dependências-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/"
+
+
 
 </body>
 
