--- a/index.html
+++ b/index.html
@@ -1,120 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <style></style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pokédex</title>
-  </head>
-  <body>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Seu CSS personalizado pode ser adicionado aqui -->
+    <style>
+        /* Adicione estilos personalizados aqui */
+        .search-bar {
+            display: flex;
+            align-items: center;
+            margin-left: auto; /* Mover para o canto direito */
+        }
+
+        .search-input {
+            flex-grow: 1; /* Ajusta a largura da barra de pesquisa para ocupar o espaço disponível */
+        }
+
+        .navbar-brand img {
+            width: 80px; /* Ajuste o tamanho da imagem da Pokébola conforme necessário */
+            height: 80px;
+            margin-right: 10px;
+        }
+
+        .navbar-brand img.logo {
+            width: 100px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <!-- Barra de Navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="./imagens/pokeball.png" alt="Pokeball" />
+            <img src="./imagens/download-removebg-preview.png" alt="Pokédex Logo" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Adicione aqui os links do menu, se necessário -->
+        </div>
+        <!-- Barra de Pesquisa -->
+        <div class="ml-auto my-2 my-lg-0 search-bar">
+            <input class="form-control mr-sm-2 search-input" type="search" placeholder="Pesquisar Pokémon..." aria-label="Pesquisar" id="searchInput">
+            <button class="btn btn-primary my-2 my-sm-0 search-button" onclick="searchPokemon()">Pesquisar</button>
+        </div>
+    </nav>
+
     <div class="container mt-5">
-      <h1 class="mb-4">Pokédex</h1>
-      <input
-        type="text"
-        id="searchInput"
-        class="form-control mb-3"
-        placeholder="Pesquisar por nome"
-      />
-      <div id="pokemonList" class="row"></div>
-      <button id="loadMoreBtn" class="btn btn-primary mt-3">
-        Carregar Mais
-      </button>
+        <!-- Lista de Pokémons -->
+        <div class="row" id="pokemon-list">
+            <!-- A lista de Pokémons será exibida aqui -->
+        </div>
+
+        <!-- Detalhes do Pokémon -->
+        <div
+            class="modal fade"
+            id="pokemonDetailsModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="pokemonDetailsModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="pokemonDetailsModalLabel">
+                            Detalhes do Pokémon
+                        </h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="pokemon-details">
+                        <!-- Os detalhes do Pokémon serão exibidos aqui -->
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <!-- Bootstrap JS e dependências -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-      let offset = 0;
-      const limit = 21;
-      const pokemonList = document.getElementById("pokemonList");
-      const loadMoreBtn = document.getElementById("loadMoreBtn");
-      const searchInput = document.getElementById("searchInput");
-
-      function loadPokemons() {
-        fetch(
-          `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
-        )
-          .then((response) => response.json())
-          .then((data) => {
-            data.results.forEach((pokemon) => {
-              fetch(pokemon.url)
+        document.addEventListener("DOMContentLoaded", function () {
+            // Fetch para obter a lista de Pokémons
+            fetch("https://pokeapi.co/api/v2/pokemon?limit=1080")
                 .then((response) => response.json())
-                .then((pokemonData) => {
-                  const pokemonCard = document.createElement("div");
-                  pokemonCard.classList.add("col-md-4", "mb-4");
-                  pokemonCard.innerHTML = `
-                  <div class="card">
-                    <img src="${
-                      pokemonData.sprites.front_default
-                    }" class="card-img-top" alt="${pokemon.name}">
-                    <div class="card-body">
-                      <h5 class="card-title">${pokemonData.name}</h5>
-                      <p class="card-text">Tipo: ${pokemonData.types
-                        .map((type) => type.type.name)
-                        .join(", ")}</p>
-                      <a href="pokemon-details.html?name=${
-                        pokemonData.name
-                      }" class="btn btn-primary">Detalhes</a>
-                    </div>
-                  </div>
-                `;
-                  pokemonList.appendChild(pokemonCard);
-                })
-                .catch((error) =>
-                  console.error("Erro ao obter dados do Pokémon:", error)
-                );
-            });
-            offset += limit;
-          })
-          .catch((error) =>
-            console.error("Erro ao obter lista de Pokémon:", error)
-          );
-      }
+                .then((data) => {
+                    const pokemonList = document.getElementById("pokemon-list");
 
-      function searchPokemons() {
-        const searchTerm = searchInput.value.toLowerCase();
-        pokemonList.innerHTML = "";
-        fetch(`https://pokeapi.co/api/v2/pokemon/${searchTerm}`)
-          .then((response) => response.json())
-          .then((pokemonData) => {
-            const pokemonCard = document.createElement("div");
-            pokemonCard.classList.add("col-md-4", "mb-4");
-            pokemonCard.innerHTML = `
-            <div class="card">
-              <img src="${
-                pokemonData.sprites.front_default
-              }" class="card-img-top" alt="${pokemonData.name}">
-              <div class="card-body">
-                <h5 class="card-title">${pokemonData.name}</h5>
-                <p class="card-text">Tipo: ${pokemonData.types
-                  .map((type) => type.type.name)
-                  .join(", ")
-                  .join(", ")}</p>
-                <a href="pokemon-details.html?name=${
-                  pokemonData.name
-                }" class="btn btn-primary">Detalhes</a>
-              </div>
-            </div>
-          `;
-            pokemonList.appendChild(pokemonCard);
-          })
-          .catch((error) => {
-            console.error("Pokémon não encontrado:", error);
-            pokemonList.innerHTML =
-              "<p>Nenhum Pokémon encontrado com esse nome.</p>";
-          });
-      }
+                    data.results.forEach((pokemon) => {
+                        const card = document.createElement("div");
+                        card.className = "col-md-3 mb-4";
 
-      loadMoreBtn.addEventListener("click", loadPokemons);
-      searchInput.addEventListener("input", searchPokemons);
+                        const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
+                        const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
 
-      loadPokemons();
+                        card.innerHTML = `
+                            <div class="card">
+                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
+                                <div class="card-body">
+                                    <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
+                                    <a href="pokemon-details.html?url=${pokemon.url}" class="btn btn-primary">Ver Detalhes</a>
+                                </div>
+                            </div>
+                        `;
+
+                        pokemonList.appendChild(card);
+                    });
+
+                    // Adicionar evento de clique para exibir detalhes do Pokémon
+                    document.querySelectorAll(".btn-primary").forEach((btn) => {
+                        btn.addEventListener("click", function () {
+                            const pokemonUrl = this.getAttribute("href");
+                            showPokemonDetails(pokemonUrl);
+                        });
+                    });
+                });
+        });
+
+        // Função para mostrar detalhes do Pokémon
+        function showPokemonDetails(url) {
+            fetch(url)
+                .then((response) => response.json())
+                .then((pokemon) => {
+                    const pokemonDetailsModal = document.getElementById(
+                        "pokemonDetailsModalLabel"
+                    );
+                    const pokemonDetails = document.getElementById("pokemon-details");
+
+                    pokemonDetailsModal.textContent = `Detalhes do Pokémon - ${pokemon.name}`;
+                    pokemonDetails.innerHTML = `
+                        <p><strong>Número:</strong> ${pokemon.id}</p>
+                        <p><strong>Tipo:</strong> ${pokemon.types
+                            .map((type) => type.type.name)
+                            .join(", ")}</p>
+                        <p><strong>Habilidades:</strong> ${pokemon.abilities
+                            .map((ability) => ability.ability.name)
+                            .join(", ")}</p>
+                        <p><strong>Estatísticas:</strong></p>
+                        <ul>
+                            ${pokemon.stats
+                                .map(
+                                    (stat) =>
+                                        `<li><strong>${stat.stat.name}:</strong> ${stat.base_stat}</li>`
+                                )
+                                .join("")}
+                        </ul>
+                    `;
+
+                    // Exibe o modal de detalhes
+                    $('#pokemonDetailsModal').modal('show');
+                });
+        }
     </script>
-  </body>
+</body>
 </html>
+
