--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -59,7 +59,7 @@
   </head>
   <body>
     <!-- Barra de Navegação -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
       <a class="navbar-brand" href="./index.html">
         <img src="./imagens/pokeball.png.png" alt="Pokeball" />
         <img
