--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -7,55 +7,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Detalhes do Pokémon</title>
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="styles.css">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <!-- Seu CSS personalizado pode ser adicionado aqui -->
-    <style>
-      /* Adicione estilos personalizados aqui */
-      .search-bar {
-        display: flex;
-        align-items: center;
-      }
-      .navbar-brand img {
-        width: 80px; /* Ajuste o tamanho da imagem da Pokébola conforme necessário */
-        height: 80px;
-        margin-right: 10px;
-      }
-
-      .navbar-brand img.logo {
-        width: 100px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
-        height: auto;
-      }
-
-      #pokemon-details {
-        display: flex; /* Adiciona o modelo de layout flexível para alinhar os elementos em linha */
-        justify-content: space-between; /* Adiciona espaçamento entre os elementos para preencher a largura disponível */
-        align-items: center; /* Centraliza verticalmente os elementos */
-        max-width: 800px; /* Limita a largura máxima para manter a responsividade */
-        margin: 0 auto; /* Centraliza o conteúdo na página */
-        margin-top: 20px; /* Adiciona margem superior para separar da barra de navegação */
-      }
-
-      #pokemon-details img {
-        max-width: 60%; /* Ajuste a largura máxima da imagem do Pokémon para 60% */
-        height: auto; /* Mantém a proporção da imagem */
-      }
-      #pokemon-details .pokemon-info {
-        max-width: 50%; /* Ajuste a largura máxima das informações para 50% */
-      }
-
-      #pokemon-details ul {
-        list-style: none; /* Remove os marcadores de lista padrão */
-        padding: 0; /* Remove o preenchimento padrão da lista */
-      }
-
-      #pokemon-details ul li {
-        margin-bottom: 10px; /* Adiciona espaço entre os itens da lista */
-      }
-    </style>
+    
   </head>
   <body>
     <!-- Barra de Navegação -->
