--- a/index.html
+++ b/index.html
@@ -13,32 +13,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Seu CSS personalizado pode ser adicionado aqui -->
     <style>
-      /* ... Seu CSS existente ... */
-
-      /* Adicione estilos personalizados aqui */
       .card {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1); /* Sombra nos cards */
-        transition: box-shadow 0.3s ease; /* Transição suave para a sombra */
-
-        /* Adicione os estilos específicos para o efeito hover */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+        transition: box-shadow 0.3s ease;
       }
       .card-background {
         background-image: url("./imagens/pp_504x498-pad_600x600_f8f8f8.u3-removebg-preview.png");
         background-position: center;
         border-radius: 2%;
       }
-
       .card:hover {
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 1); /* Aumenta a sombra ao passar o mouse */
-        transform: scale(
-          1.05
-        ); /* Aumenta ligeiramente o tamanho ao passar o mouse */
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
+        transform: scale(1.05);
       }
-
-      /* ... Seu CSS existente ... */
-
       .steel {
         background-color: #b8b8d0;
       }
@@ -174,6 +162,7 @@
       >
         Ver Mais
       </button>
+      <button onclick="scrollToTop()">Topo</button>
       <!-- Detalhes do Pokémon -->
       <div
         class="modal fade"
@@ -210,29 +199,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-  const pokemonList = document.getElementById("pokemon-list");
-  let offset = 0;
-  const limit = 20;
+        const pokemonList = document.getElementById("pokemon-list");
+        let offset = 0;
+        const limit = 20;
 
-  // Função para carregar os Pokémon
-  function loadPokemon() {
-    // Fetch para obter a lista de Pokémon com base no offset e limit
-    fetch(`https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`)
-      .then((response) => response.json())
-      .then((data) => {
-        const pokemonData = data.results;
-
-        pokemonData.forEach(async (pokemon) => {
-          const card = document.createElement("div");
-          card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
-
-          const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
-          const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
-          const pokemonType = await fetch(pokemon.url)
+        // Função para carregar os Pokémon
+        function loadPokemon() {
+          // Fetch para obter a lista de Pokémon com base no offset e limit
+          fetch(
+            `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
+          )
             .then((response) => response.json())
-            .then((pokemon) => pokemon.types[0].type.name);
+            .then((data) => {
+              const pokemonData = data.results;
 
-          card.innerHTML = `
+              pokemonData.forEach(async (pokemon) => {
+                const card = document.createElement("div");
+                card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
+
+                const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
+                const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
+                const pokemonType = await fetch(pokemon.url)
+                  .then((response) => response.json())
+                  .then((pokemon) => pokemon.types[0].type.name);
+
+                card.innerHTML = `
                         <div class="card ${pokemonType}">
                             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
                             <div class="card-body">
@@ -242,24 +233,31 @@
                         </div>
                     `;
 
-          pokemonList.appendChild(card);
-        });
+                pokemonList.appendChild(card);
+              });
 
-        // Incrementa o offset para a próxima carga
-        offset += limit;
-      })
-      .catch((error) => {
-        console.error("Erro ao carregar mais Pokémon:", error);
+              // Incrementa o offset para a próxima carga
+              offset += limit;
+            })
+            .catch((error) => {
+              console.error("Erro ao carregar mais Pokémon:", error);
+            });
+        }
+
+        // Inicializa a carga dos primeiros Pokémon
+        loadPokemon();
+
+        // Adiciona um evento de clique ao botão "Ver Mais"
+        document
+          .getElementById("loadMoreButton")
+          .addEventListener("click", loadPokemon);
       });
-  }
-
-  // Inicializa a carga dos primeiros Pokémon
-  loadPokemon();
-
-  // Adiciona um evento de clique ao botão "Ver Mais"
-  document.getElementById("loadMoreButton").addEventListener("click", loadPokemon);
-});
-
+      const scrollToTop = () => {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      };
     </script>
   </body>
 </html>
