--- a/index.html
+++ b/index.html
@@ -226,6 +226,19 @@
     function searchPokemon() {
 
     }
+
+    const pokemonFilter = (name) => {
+      var filteredPokemons = [];
+      if(name===""){
+      getPokemons();
+    }
+      for (var i in pokemons) {
+        if (pokemons [i].data.name.includes(name)) {
+          filteredPokemons.push(pokemons[i]);
+        }
+      }
+      setPokemons(filteredPokemons);
+    };
   </script>
 </body>
 
